--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,7 +30,7 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Install dependencies
-      run: composer install
+      run: composer install --prefer-dist --no-progress
 
     - name: Run tests script
       shell: bash
