--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -29,11 +29,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-php-
 
-    - name: Update dependencies
-      run: composer update
-
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
+      with:
+        php-version: '7.4'
 
     - name: Run tests script
       shell: bash
